# unity-shader-graph-mcp

./: .gitignore  CHANGELOG.md  README.md
contracts/: README.md
contracts/examples/: shadergraph_asset.add_node.request.json  shadergraph_asset.add_node.response.json  shadergraph_asset.add_property.request.json  shadergraph_asset.add_property.response.json  shadergraph_asset.connect_ports.request.json  shadergraph_asset.connect_ports.response.json  shadergraph_asset.create_graph.request.json  shadergraph_asset.create_graph.response.json  shadergraph_asset.read_graph_summary.request.json  shadergraph_asset.read_graph_summary.response.json  shadergraph_asset.save_graph.request.json  shadergraph_asset.save_graph.response.json
docs/: 1.0.0-checklist.md  1.0.0-work-split.md  1.1.0-plan.md  architecture.md  compatibility-matrix.md  github-release-1.0.0-rc.1.md  github-release-1.0.0.md  github-release-1.1.0.md  github-release-1.2.0.md  install-and-happy-path.md  mcp-smoke-payloads.md  milestone-boundary.md  parallel-work-split.md  release-checklist.md  roadmap.md
docs/adr/: 0001-shader-graph-focus.md  0002-parallel-ownership-boundaries.md  (+1 more)
server/: README.md  pyproject.toml
server/src/unity_shader_graph_mcp/: __init__.py  __main__.py  contracts.py  mcp_smoke.py  real_mcp_smoke.py  server.py  transport.py  unity_bridge.py
server/src/unity_shader_graph_mcp/tools/: __init__.py  shadergraph_asset.py
server/tests/: README.md  test_mcp_transport.py  test_mcp_transport_subprocess.py  test_server_contract.py  test_shadergraph_asset.py  test_unity_bridge.py
(+28 files in other folders)
