[project]
name = "unity-shader-graph-mcp"
version = "1.0.0"
description = "Focused MCP server for Unity Shader Graph workflows."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
